# rapi

./: .buildinfo  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  Untitled.ipynb  config.ini  contributing.html  defaults.yml  defaults_alt.yml  discusion.html  env_deactivate.sh  genindex.html  index.html  install_deps.sh  installation.html  issues.md  objects.inv  overview.html  pyproject.toml  rapidev_responses.sh  reference.html  requirements.txt  run_tests.sh  search.html  searchindex.js  todo.md  user_guide.md
.github/: CONTRIBUTING.md
.github/workflows/: main.yml  release.yml
_sources/: contributing.md.txt  overview.md.txt  reference.md.txt
_sources/notebooks/: get_participants_for_the_given_show.ipynb.txt  get_schedules_for_the_given_show.ipynb.txt  get_stations.ipynb.txt
_static/: out.csv
data/: stations_ids_table.csv
docs/: config.md  todo.md
docs/data/apidef/: swagger.yml
docs/data/csv/: episodes.csv  episodes_fields.csv  genres.csv  genres_fields.csv  keywords.csv  persons.csv  persons_fields.csv  program.csv  program_fields.csv  schedule.csv  serials.csv  serials_fields.csv  shows.csv  shows_fields.csv  stations-all_fields.csv  stations.csv  topics.csv  topics_fields.csv
docs/data/json/: episodes.json  schedule.json  serials.json  stations-all.json  stations.json
docs/jupyter_execute/notebooks/: Untitled.ipynb  client_usage.ipynb  config_default_usage.ipynb  config_test.ipynb  configuration_usage.ipynb  explore_in_pandas.ipynb  moderators.ipynb  show_episodes.ipynb  show_schedule_vs_episodes.ipynb  show_schedules.ipynb  station_shows.ipynb  stations.ipynb
docs/jupytext/: test.py
docs/notebooks/: Untitled.ipynb  client_usage.ipynb  config_default_usage.ipynb
docs/source/: api_documentation.md  conf.py  config_module.md  contributing.md  demo_logging.py  discusion.md  features_discusion.md  index.md  index.rst  issues.md  original.md  user_guide.md
docs/source/notebooks/: client_usage.ipynb  client_usage.py  configuration_usage.ipynb  explore_data_with_pandas.ipynb  explore_in_pandas.ipynb  explore_in_pandas.py  get_episodes_for_the_given_show.ipynb  moderators.ipynb  moderators.py  show_episodes.ipynb  show_episodes.py  show_schedule_vs_episodes.ipynb  show_schedule_vs_episodes.py  show_schedules.ipynb  show_schedules.py  station_shows.ipynb  station_shows.py  stations.ipynb  stations.py
docs/source/notebooks/api_explore/: explore_episodes.py  explore_get_full_json.py  explore_schedule.py  explore_schedule2.py
notebooks/: explore_data_with_pandas.html  explore_data_with_pandas.ipynb  get_episodes_for_the_given_show.html  get_participants_for_the_given_show.html  get_schedules_for_the_given_show.html  get_shows_for_the_given_station.html  get_shows_for_the_given_station.ipynb  get_stations.html
runtime/: get_schedule.csv  get_show_episodes.csv  out.csv  rapidev_croapp(1).yml
runtime/croapp/csv/: .~lock.shows.csv#  episodes.csv  episodes_fields.csv  genres.csv  genres_fields.csv  keywords.csv  persons.csv  persons_fields.csv  program.csv  program_fields.csv  schedule.csv  serials.csv  serials_fields.csv  shows.csv  stations-all.csv  stations-all_fields.csv  stations.csv  topics.csv  topics_fields.csv
runtime/croapp/json/: episodes.json  genres.json  keywords.json  persons.json  program.json  schedule.json  serials.json  shows.json  stations-all.json  stations.json  topics.json
runtime/rapidev_api/: rapidev_croapp_test.yml  rapidev_croapp_whole.yml
runtime/rapidev_reply_all/: episodes.json  genres.json  keywords.json  persons.json  program.json  schedule-current.json  schedule-day-flat.json  schedule-day.json  serials.json  shows.json  stations.json  topics.json
runtime/rapidev_reply_samples/episodes/000006c7-4204-33fe-897c-3765247637a5/: 000006c7-4204-33fe-897c-3765247637a5.json  genres.json  keywords.json
runtime/rapidev_reply_samples/keywords/9c605442-9185-3f4f-b6c5-6b2c0bb1bcb7/: 9c605442-9185-3f4f-b6c5-6b2c0bb1bcb7.json
runtime/rapidev_reply_samples/persons/8bed7519-4284-32e5-a693-15144f7edc6d/: participation.json  (+1 more)
runtime/responses/: get_responses.sh  stations-all.json
runtime2/: stations.csv  stations_fields.csv
runtime2/Api_croapp/db/: shows.csv  shows_fields.csv
scripts/: build_jupyter.sh  build_sphinx_docs.sh  docker_ops.sh  env_deactivate.sh  env_install_deps.sh  git_ops.sh  git_pre.sh  jupytext_build.sh  rapidev_responses.sh  rapidev_responses_download.sh  test_curl.sh  tests_run.sh
scripts/api_explore/: explore_episodes.py  explore_get_full_json.py  explore_schedule.py  explore_schedule2.py
src/rapi/: __init__.py  __main__.py  _cache.py  _cli.py  _client.py  _command.py  _config.py  _dbase_local.py  _domain.py  _errors.py  _helpers.py  _logger.py  _model.py  _params.py  _service.py  _services.py  _shared.py  _station_ids.py  api_common.py  api_croapp.py  broadcast.py  command.py  config.py  constants.py  errors.py  helpers.py  helpers2.py  logger.py  model.py  params.py  runner.py  station.py  station_ids.py  stations.py  swagger.py  swagger_parse.py
src/rapi/config/: __init__.py  _conf.py  _conf_pars.py  _conf_vars.py  _config.py  _params.py
src/rapi/data/: .~lock.stations_ids.csv#  defaults.ini  defaults.yml  stations.csv  stations_ids.csv
src/rapi/helpers/: __init__.py  _errors.py  _logger.py  helpers.py
tests/: defaults_alt.yml  test_broadcast.py  test_cache.py  test_cache.pyp  test_client.py  test_client_api.py  test_client_db.py  test_client_debug.py  test_command.py  test_command.pyp  test_common.py  test_config.py  test_config.pyp  test_configure.py  test_croapp.py  test_croapp_api.py  test_dbase_local.py  test_errors.py  test_helper.py  test_helpers.py  test_helpers.pyp  test_import.py  test_main.py  test_main.pyp  test_model.py  test_model.pyp  test_params.py  test_params.pyp  test_service.py  test_services.py  test_shared.py  test_station_ids.py  test_station_ids.pyp
tests/data/: defaults.yml  defaults_alt.yml
(+18 files in other folders)
