[project]
name = "rapi"
dynamic = ["version", "readme"]
authors = [
    {name = "Jan Kačaba", email = "jan.kacaba@rozhlas.cz"},
		{name = "David Landa", email = "david.landa@rozhlas.cz"},
]
description = "The Python client for <https://rapidoc.croapp.cz/>."
requires-python = ">=3.11"
keywords = ["REST", "API"]
license = {text = "BSD-3-Clause"}
dependencies = [
	"configparser",
	"dacite",
	"dataclasses_json",
	"mergedeep",
	"numpy",
	"pandas",
	"pandas-stubs",
	"pyyaml",
	"requests",
	"ruamel.yaml",
	"types-PyYAML",
	"types-python-dateutil",
	"types-requests",
	"types_openpyxl",
	# "openapi3-parser",
	# "openapi_parser",
	# "pytz",
	# "swagger_parser",
	# "types-pytz",
]

[tool.setuptools.dynamic]
version = {attr = "rapi.__version__"}
readme = {file = ["README.rst", "USAGE.rst"]}

[tool.setuptools.packages.find]
where = ["src"] 
namespaces = false  

[project.optional-dependencies]
test = ["pytest", "pytest-html"]
lint = ["black[jupyter]","isort","ruff","flake8","mypy","pydocstyle"]
docs = ["sphinx","myst-parser","sphinx_rtd_theme","sphinx-autobuild","sphinx-autodoc-typehints","sphinx-autoapi","MyST-NB","jupyter","visidata"]
type = ["types-requests","pandas-stubs"]
dev = ["rapi[test]","rapi[lint]","rapi[docs]","rapi[types]"]

[project.scripts]
rapi = "rapi._cli:main"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
# log_cli = true
# log_cli = false
# log_cli_level = "DEBUG"
log_cli_format='%(asctime)s %(name)s [%(levelname)1s] %(filename)s:%(funcName)s:%(lineno)d - %(message)s'
# log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
	"client:",
	"config:",
	"command:",
	"current: adhoc select test",
	"debug:",
	"domain: make domain",
	"helpers:",
	"model:",
	"params:",
	"station_ids:",
  "client_debug:",
]

[tool.isort]
profile = "black"

