[project]
name = "rapi"
dynamic = ["version", "readme"]
authors = [
    {name = "Jan Kačaba", email = "jan.kacaba@rozhlas.cz"},
    {name = "David Landa", email = "david.landa@rozhlas.cz"},
]
description = "The Python client for <https://rapidoc.croapp.cz/>."
requires-python = ">=3.12"
keywords = ["REST", "API"]
license = {text = "MIT"}
dependencies = [
	"dacite",
	"dataclasses_json",
	"mergedeep",
	"numpy",
	"pandas",
	"pandas-stubs",
	"pyyaml",
	"requests",
	"ruamel.yaml",
	"types-PyYAML",
	"types-python-dateutil",
	"types-requests",
	"types_openpyxl",
	"urllib3",
]

[tool.setuptools.dynamic]
version = {attr = "rapi.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.optional-dependencies]
# keep

[project.scripts]
rapi = "rapi.__main__:main"

[tool.pytest.ini_options]
log_cli_format='%(asctime)s %(name)s [%(levelname)1s] %(filename)s:%(funcName)s:%(lineno)d - %(message)s'
markers = [
	"client",
	"shared",
	"domain",
	"service",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

extend-include = ["*.ipynb"]

# Same as Black.
line-length = 88 # use 99! Read https://peps.python.org/pep-0008/
indent-width = 4 # spaces
                 # Note: I still prefer tabs such as Guido!

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.jupytext]
formats = "ipynb,py:precent"
